--- a/src/main/webapp/web/BOOTSTRAP/button_style.html
+++ b/src/main/webapp/web/BOOTSTRAP/button_style.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Bootstrap Template</title>
+<title>button style</title>
 <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <link rel="stylesheet" type="text/css" href="./bootstrap3/css/bootstrap.css">
