--- a/src/main/webapp/web/BOOTSTRAP/button_list.html
+++ b/src/main/webapp/web/BOOTSTRAP/button_list.html
@@ -22,6 +22,23 @@
     <li><a href="#">Separated link</a></li>
   </ul>
 </div>
+<div class="dropdown">
+  <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+    Dropdown1
+    <span class="caret"></span>
+  </button>
+   <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+    Dropdown2
+    <span class="caret"></span>
+  </button>
+  <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+    <li><a href="#">Action</a></li>
+    <li><a href="#">Another action</a></li>
+    <li><a href="#">Something else here</a></li>
+    <li role="separator" class="divider"></li>
+    <li><a href="#">Separated link</a></li>
+  </ul>
+</div>
 </body>
 <script type="text/javascript" src="./bootstrap3/jquery.min.js"></script>
 <script type="text/javascript" src="./bootstrap3/js/bootstrap.js"></script>
