--- a/src/main/webapp/web/BOOTSTRAP/font.html
+++ b/src/main/webapp/web/BOOTSTRAP/font.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Bootstrap Template</title>
+<title>fount</title>
 <meta name="viewport"
 	content="width=device-width,initial-scale=1,user-scalable=no" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,35 +10,25 @@
 	href="./bootstrap3/css/bootstrap.css">
 <link rel="stylesheet" type="text/css"
 	href="./bootstrap3/font-awesome-4.7.0/css/font-awesome.css" />
-<style type="text/css">
-/* 在不同的宽度页面响应不同的内容 */
-@media ( max-width : 768px) {
-	body{
-		background-color:red;
-	}
-}
-
-@media ( min-width : 768px) and (max-width : 968px) {
-	body{
-		background-color:green;
-	}
-}
-
-@media ( min-width : 992px) and (max-width: 1200px) {
-	body{
-		background-color:blue;
-	}
-}
-
-@media ( min-width : 1200px) {
-	body{
-		background-color:yellow;
-	}
-}
-</style>
 </head>
 <body>
-
+	<div class="container text-right">
+	<!-- 字体大小从小到大 -->
+		<small>power by</small>
+		Blogs 
+		<b>smart</b>
+		<b>poppoooopo</b>
+	</div>
+	<!--就是一个分区标签和div的功能是类似的-->
+	<nav>
+		<div class="container text-center">
+			<!-- <h1>与<b>同时用的效果 -->
+			<h1>
+				<!-- 在bootstarap里加上b标签会有明显的加粗效果-->
+				<b>poppoooopo</b>
+			</h1>
+		</div>
+	</nav>
 </body>
 <script type="text/javascript" src="./bootstrap3/jquery.min.js"></script>
 <script type="text/javascript" src="./bootstrap3/js/bootstrap.js"></script>
