--- a/src/main/webapp/web/BOOTSTRAP/navigation2.html
+++ b/src/main/webapp/web/BOOTSTRAP/navigation2.html
@@ -18,9 +18,9 @@ text-align: center;
 	content="width=device-width,initial-scale=1,user-scalable=no" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <link rel="stylesheet" type="text/css"
-	href="../bootstrap3/css/bootstrap.css">
+	href="./bootstrap3/css/bootstrap.css">
 <link rel="stylesheet" type="text/css"
-	href="../bootstrap3/font-awesome-4.7.0/css/font-awesome.css" />
+	href="./bootstrap3/font-awesome-4.7.0/css/font-awesome.css" />
 </head>
 
 <body>
@@ -60,6 +60,6 @@ text-align: center;
 <script type="text/javascript" src="./bootstrap3/js/holder.js"></script>
 <script type="text/javascript" src="./bootstrap3/js/html5shiv.min.js"></script>
 <script type="text/javascript"
-	src="../bootstrap3/js/css3-mediaqueries.js"></script>
+	src="./bootstrap3/js/css3-mediaqueries.js"></script>
 <script type="text/javascript" src="./bootstrap3/js/respond.min.js"></script>
 </html>
