--- a/src/main/webapp/web/box/border.html
+++ b/src/main/webapp/web/box/border.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title>border</title>
 <style type="text/css">
-div {
+.c {
 	width:200px;
 	height:200px;
 	border:10px outset red;
@@ -23,9 +23,12 @@ div {
 <body>
 <header></header>
 <article>
-<div></div>
-<span class="s1">span_demo</span> <span class="s1">span_demo2</span>
-<div></div>
+<div>
+<span class="s1">span_demo</span>
+<span class="s1">span_demo2</span>
+<span class="s1">span_demo3</span>
+</div>
+<div class="c"></div>
 </article>
 <footer></footer>
 
