--- a/src/main/webapp/web/basic/coke info.html
+++ b/src/main/webapp/web/basic/coke info.html
@@ -2,17 +2,26 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>curriculum-vitae</title>
+<title>coke info</title>
 </head>
 <body>
+<header>
+<div>
 <h1 align="center">大苹果汽水</h1>
+</div>
+</header>
 <hr>
+<article>
 <h2>基本信息</h2>
 <p>名称：大苹果汽水</p>
 <p>颜色：Blue</p>
 <p>类型：冲浪一夏</p>
 <h2>描述</h2>
 <p>新配方，新口味</p>
+</article>
+<footer>
 <h2>个人经历</h2>
+</footer>
+
 </body>
 </html>
