--- a/src/main/webapp/web/basic/mapOfImg.html
+++ b/src/main/webapp/web/basic/mapOfImg.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Insert title here</title>
+<title>map of img</title>
 </head>
 <body>
 	<!--  用标签中的 mymap 属性指定使用哪个map  -->
