--- a/src/main/webapp/web/basic/table/table2.html
+++ b/src/main/webapp/web/basic/table/table2.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Study table</title>
+<title>table2:Study table</title>
 
 <style type="text/css">
 
@@ -28,8 +28,6 @@ td {
 font {
 color: purple;
 }
-
-
 </style>
 
 </head>
