--- a/src/main/webapp/web/basic/table/tableDemo.html
+++ b/src/main/webapp/web/basic/table/tableDemo.html
@@ -3,9 +3,28 @@
 <head>
 <meta charset="UTF-8">
 <title>Insert title here</title>
+<style type="text/css">
+table {
+	border-collapse: collapse;
+	border: 1px solid blue;
+	font-style: italic;
+	width: 50%;
+}
+th {	
+	border:1px solid red;
+	color: orange;
+	padding: 30px;
+}
+
+td {
+	border:1px solid red;
+	color: olive;
+	padding: 30px;
+}
+</style>
 </head>
 <body>
-<table class="table">
+<table>
 			<caption></caption>
 			<thead>
 				<tr>
