--- a/src/main/webapp/web/basic/table/table_basic.html
+++ b/src/main/webapp/web/basic/table/table_basic.html
@@ -2,10 +2,10 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>表格标签</title>
+<title>table</title>
 </head>
 <body>
-<h3>表格标签学习</h3>
+<h3>table</h3>
 	<table border="1" width="400px" cellpadding="30px" cellspacing="0">
 		<tr height="60px" >
 			<td width="100">科目</td>
