--- a/src/main/webapp/web/basic/property.html
+++ b/src/main/webapp/web/basic/property.html
@@ -14,7 +14,9 @@
 	<i>斜体2</i><br>
 	<!-- 删除线 -->
 	<del>删除线1</del>
+	<!-- 已过时,不推荐使用 -->
 	<s>删除线2</s>
+	<!-- 已过时,不推荐使用 -->
 	<!-- 下划线 -->
 	<u>下划线</u> 
 	<!-- 空格 -->
