--- a/src/main/webapp/web/basic/table/tableDemo.html
+++ b/src/main/webapp/web/basic/table/tableDemo.html
@@ -2,13 +2,13 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Insert title here</title>
+<title>山东省高等教育自学考试2019年10月英语</title>
 <style type="text/css">
 table {
 	border-collapse: collapse;
 	border: 1px solid blue;
 	font-style: italic;
-	width: 50%;
+	width: 100%;
 }
 th {	
 	border:1px solid red;
@@ -17,7 +17,7 @@ th {
 }
 
 td {
-	border:1px solid red;
+	border:1px solid blue;
 	color: olive;
 	padding: 30px;
 }
@@ -35,71 +35,45 @@ td {
 					<th rowspan="3">新专业名称</th>
 					<th rowspan="3">原专业名称</th>
 					<th rowspan="3">类别</th>
-					<th>5</th>
-					<th>6</th>
-					<th>7</th>
-					<th>8</th>
-					<th>9</th>
+					<th colspan="4">时间</th>
+					<th rowspan="3">主考院校</th>
 				</tr>
 				<tr>
-					<th>5</th>
-					<th>6</th>
-					<th>7</th>
-					<th>8</th>
-					<th>9</th>
+					<th colspan="2">10月19日</th>
+					<th colspan="2">10月20日</th>
 				</tr>
 				<tr>
-					<th>5</th>
-					<th>6</th>
-					<th>7</th>
-					<th>8</th>
-					<th>9</th>
+					<th>9:00-11:30</th>
+					<th>14:30-17:30</th>
+					<th>9:00-11:30</th>
+					<th>14:30-17:00</th>
 				</tr>
 			</thead>
-			<tbody>
+			<tbody>	
 				<tr>
-					<td>1</td>
-					<td>2</td>
-					<td>3</td>
-					<td>4</td>
-					<td>5</td>
-					<td>6</td>
-					<td>7</td>
-					<td>8</td>
-					<td>9</td>
+					<td rowspan="3">970202</td>
+					<td rowspan="3">英语</td>
+					<td rowspan="3">英语</td>
+					<td rowspan="3">专</td>
+					<td>00596英语阅读(二)</td>
+					<td></td>
+					<td>00597英语写作基础</td>
+					<td>00794综合英语(一)</td>
+					<td>山东大学</td>
 				</tr>
 				<tr>
-					<td>1</td>
-					<td>2</td>
-					<td>3</td>
-					<td>4</td>
-					<td>5</td>
-					<td>6</td>
-					<td>7</td>
-					<td>8</td>
-					<td>9</td>
+					<td>03706思想道德修养与法律基础</td>
+					<td></td>
+					<td>04729大学语文</td>
+					<td></td>
+					<td>中国海洋大学</td>
 				</tr>
 				<tr>
-					<td>1</td>
-					<td>2</td>
-					<td>3</td>
-					<td>4</td>
-					<td>5</td>
-					<td>6</td>
-					<td>7</td>
-					<td>8</td>
-					<td>9</td>
-				</tr>
-				<tr>
-					<td>1</td>
-					<td>2</td>
-					<td>3</td>
-					<td>4</td>
-					<td>5</td>
-					<td>6</td>
-					<td>7</td>
-					<td>8</td>
-					<td>9</td>
+					<td></td>
+					<td></td>
+					<td>12656毛泽东思想阿和中国特色社会主义理论体系</td>
+					<td></td>
+					<td></td>
 				</tr>
 			</tbody>
 		</table>
