--- a/src/main/webapp/web/css/css_demo/a_href.html
+++ b/src/main/webapp/web/css/css_demo/a_href.html
@@ -5,30 +5,27 @@
 <title>a_href</title>
 
 <style type="text/css">
-/* 访问状态 */
+/* 已访问后的样式 */
 a:visited {
-	color: white;
+	color: orange;
 }
-
-/* 未访问状态 */
+/* 未访问时的样式 */
 a:link {
 	color: white;
 }
-
 /* 悬停状态 */
 a:hover {
 	color: blue;
 }
-
 /* 点击状态 */
 a:active {
 	color: green;
 }
-
 * {
 	color: rgba(255, 0, 0, 0.5);
 }
 
+/* 通过给a添加样式,使其像按钮一样 */
 a {
 	background-color: #0aa1ed;
 	width: 132px;
@@ -49,7 +46,7 @@ a {
 	</header>
 	<article>
 		<a href="../imgs/b.jpg">CoCo1</a>
-		
+
 		<a href="../imgs/d.jpg">CoCo2</a>
 		
 		<a href="../imgs/e.jpg">CoCo3</a> 
