--- a/src/main/webapp/web/css/css_demo/selector.html
+++ b/src/main/webapp/web/css/css_demo/selector.html
@@ -32,7 +32,7 @@ header>div,footer>div>div {
 			<h1>Start Search(red)</h1>
 		</div>
 		<div>
-			<sapn>s6</sapn>
+			<span>s6</span>
 		</div>
 	</header>
 
